@@ -7,7 +7,8 @@ import java.lang.annotation.Target;
 @Target(java.lang.annotation.ElementType.METHOD)
 public @interface BeforeGroups {
   /**
-   * The list of groups that this configuration method will run before.
+   * The list of groups that this configuration method will run before. If specified it overrides the
+   * list of groups provided through {@link #groups()} attribute.
    * This method is guaranteed to run shortly before the first test method that
    * belongs to any of these groups is invoked.
    */
@@ -19,7 +20,8 @@ public @interface BeforeGroups {
   public boolean enabled() default true;  
   
   /**
-   * The list of groups this class/method belongs to. 
+   * The list of groups this class/method belongs to. This list also describes the groups
+   * that this configuration method will run before (if no {@link #value()} attribute is defined).
    */
   public String[] groups() default {};
 
